# danmaku-server

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  onebot.template.json  setup.sh
.github/workflows/: docker-image.yml
assets/: blacklist.txt
frontend/: client.html  index.html  package.json
src/: config.rs  danmaku.rs  index.html  main.rs  middleware.rs  onebot.rs  webhook.rs
src/onebot/: cqcode.rs
