[package]
name = "danmaku-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PKUOriginalFire/danmaku-server"

[dependencies]
dotenvy = "0.15.7"
ed25519-dalek = "2.1.1"
envconfig = "0.11.0"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
governor = { version = "0.7.0", default-features = false, features = ["std", "dashmap"] }
hex = "0.4.3"
htmlize = { version = "1.0.5", features = ["unescape"] }
logos = "0.14.2"
poem = { version = "3.1.5", features = ["websocket"] }
regex = "1.11.1"
ring-channel = "0.12.0"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
